--- a/csharp_practice.csproj
+++ b/csharp_practice.csproj
@@ -38,5 +38,8 @@
   <ItemGroup>
     <Compile Include="project_euler\p039.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
